# CocoIP

./: README.md
Linux (and some other UNIX OSes)/Server/: ipConnection.h
Windows/Client/: serverCon.h
example/server-linux-multithreaded/: CMakeLists.txt  main.cpp
example/server-linux-multithreaded/cocoip/: CMakeLists.txt  ipConnection.cpp  ipConnection.h
